--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="fl_left"> <a href="#"><img src="index_files/ordnance-survey-map-leeds-50s-rl.png" alt=""></a> </div>
     <div class="fl_right">
       <h2>The University of Leeds welcomes you to GISRUK 2015</h2>
-      <p>Welcom to the 23rd GIS Research UK
+      <p>Welcome to the 23rd GIS Research UK
 (GISRUK) conference. "GISRUK2015", as it shall be known, is being hosted this year by the
 University of Leed's esteemed <a href="http://www.geog.leeds.ac.uk/">School of Geography</a> in the
 <a href="http://www.environment.leeds.ac.uk/">Faculty of Environment</a>.
