--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h2>The University of Leeds welcomes you to GISRUK 2015</h2>
       <p>Welcome to the 23rd GIS Research UK
       (GISRUK) conference. <a href="https://twitter.com/search?f=realtime&q=%23GISRUK2015&src=typd">#GISRUK2015</a> is hosted by the
-University of Leed's esteemed <a href="http://www.geog.leeds.ac.uk/">School of Geography</a> in the
+University of Leeds' esteemed <a href="http://www.geog.leeds.ac.uk/">School of Geography</a> in the
 <a href="http://www.environment.leeds.ac.uk/">Faculty of Environment</a>.
 The conference dates will be announced shortly.
 </p>
