added proper twitter follow button

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@ with rail routes added by <a href="http://www.davidheyscollection.com/page50.htm
     Hey.</a> Thanks to train spotter and local historian David for permission to
 use of this image.</p>
 <br> <br>
+
+<a href="https://twitter.com/gisruk" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gisruk</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
 <a href ="https://twitter.com/GISRUK">Follow us on Twitter</a>
     </div>
     <br class="clear">
