--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
                     researchers please persuade them to contribute; if you are a 
                     postgraduate in a field relating to GIS you are most welcome to present 
                     at GISRUK 2015. </p>
-                    <p class="readmore"><a href="http://www.geo.ed.ac.uk/gisruk/gisruk.php">More about GISRUK »</a></p>
+                    <!-- <p class="readmore"><a href="http://www.geo.ed.ac.uk/gisruk/gisruk.php">More about GISRUK »</a></p> -->
+                    </li>
+                    <li>
+                    <h2>More details coming soon...</h2>
+                    <p>We will shortly be announcing the call for papers and other information about the conference.
+                    If you would like to be notified, please email <a href="mailto:N.Malleson06@leeds.ac.uk">Nick Malleson</a>
+                    or follow @GISRUK on Twitter</p>
                     </li>
                     <!-- <li>
                     <h2>Supporting Early Careers Researchers</h2>
