Trying to fix indentation

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                     </li>
                     <li>
                     <h2>More details coming soon...</h2>
+                    <img class="imgl" src="index_files/rgs_logo.jpg" alt="">
                     <p>We will shortly be announcing the call for papers and other information about the conference.
                     If you would like to be notified, please email <a href="mailto:N.Malleson06@leeds.ac.uk">Nick Malleson</a>
                     or follow @GISRUK on Twitter</p>
