made uni logo smaller so navigation menu fits

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="header">
             <div class="fl_left">
             </div>
-            <div class="fl_right"><a href="#"><img src="http://upload.wikimedia.org/wikipedia/en/b/b8/Leeds_University_logo.svg" alt=""></a></dtopnaviv>
+            <div class="fl_right"><a href="#"><img height="60" src="http://upload.wikimedia.org/wikipedia/en/b/b8/Leeds_University_logo.svg" alt=""></a></dtopnaviv>
                 <br class="clear">
             </div>
             <!-- ####################################################################################################### -->
