added master layout and markdown files for main website pages, with updated html links - structure draft done

--- a/index.html
+++ b/index.html
@@ -27,29 +27,30 @@
             <div id="topbar">
                 <div id="topnav">
                     <ul id="menu">
-                        <li class="active"><a href="http://Leeds.gisruk.org/index.php">Home</a></li>
-                        <li><a href="http://Leeds.gisruk.org/submit.php">Submit a Paper</a></li>
-                        <li><a href="http://Leeds.gisruk.org/registration.php">Registration</a></li>
-                        <li><a href="http://Leeds.gisruk.org/programme.php">Programme</a>
+                        <li class="active"><a href="http://Leeds.gisruk.org/index.html">Home</a></li>
+                        <li><a href="submit.html">Submit a Paper</a></li>
+                        <li><a href="registration.html">Registration</a></li>
+                        <li><a href="programme.html">Programme</a>
                         <ul>
-                            <li><a href="http://Leeds.gisruk.org/workshops.php">Workshops</a></li>
-                            <li><a href="http://Leeds.gisruk.org/themes.php">Themes</a></li>
-                            <li><a href="http://Leeds.gisruk.org/keynotes.php">Keynotes</a></li>
-                            <li><a href="http://Leeds.gisruk.org/docs/TimeTable_Sessions_V1.4.pdf">Final Timetable</a></li>
+                            <li><a href="workshops.html">Workshops</a></li>
+                            <li><a href="themes.html">Themes</a></li>
+                            <li><a href="keynotes.html">Keynotes</a></li>
+                            <li><a href="docs/TimeTable_Sessions_V1.4.pdf">Final Timetable</a></li>
                         </ul>
                         </li>
                         <li><a href="#">GISRUK 2015</a>
                         <ul>
-                            <li><a href="http://Leeds.gisruk.org/travel.php">Getting Here</a></li>
-                            <li><a href="http://Leeds.gisruk.org/bursaries.php">Bursaries</a></li>
-                            <li><a href="http://Leeds.gisruk.org/prizes.php">Prizes</a></li>
+                            <li><a href="travel.html">Getting Here</a></li>
+                            <li><a href="bursaries.html">Bursaries</a></li>
+                            <li><a href="prizes.html">Prizes</a></li>
                         </ul>
                         </li>
-                        <li><a href="http://Leeds.gisruk.org/contact.php">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <br class="clear">
             </div>
+
             <!-- ####################################################################################################### -->
             <div id="intro">
                 <div class="fl_left"> <a href="#"><img src="index_files/ordnance-survey-map-leeds-50s-rl.png" alt=""></a> </div>
@@ -93,7 +94,7 @@
                     researchers please persuade them to contribute; if you are a 
                     postgraduate in a field relating to GIS you are most welcome to present 
                     at GISRUK 2015. </p>
-                    <!-- <p class="readmore"><a href="http://www.geo.ed.ac.uk/gisruk/gisruk.php">More about GISRUK »</a></p> -->
+                    <!-- <p class="readmore"><a href="http://www.geo.ed.ac.uk/gisruk/gisruk.html">More about GISRUK »</a></p> -->
                     </li>
                     <li>
                     <h2>More details coming soon...</h2>
@@ -108,8 +109,8 @@
                     <p>GISRUK is a friendly conference series that aims to encourage
                     and support early careers researchers. With the kind support from both
                     the <a href="http://qmrg.org.uk/" target="blank">Quantitative Methods Research
-                        Group</a> and the <a href="http://giscience.org.uk/" target="_blank">GIScience Research Group</a> at the <a href="http://www.rgs.org/" target="_blank">Royal Geographical Society with the IBG</a> we are able to offer <a href="http://Leeds.gisruk.org/bursaries.php">4 early careers bursaries.</a></p>
-                    <p>We will be running the <a href="http://Leeds.gisruk.org/workshops.php#YRF">Young Researcher's Forum</a> on the day before the main conference which provides valuable early careers guidance, and 
+                        Group</a> and the <a href="http://giscience.org.uk/" target="_blank">GIScience Research Group</a> at the <a href="http://www.rgs.org/" target="_blank">Royal Geographical Society with the IBG</a> we are able to offer <a href="bursaries.html">4 early careers bursaries.</a></p>
+                    <p>We will be running the <a href="workshops.html#YRF">Young Researcher's Forum</a> on the day before the main conference which provides valuable early careers guidance, and 
                     the opportunity to network with your peers.</p>
                     </li>
                     -->
@@ -131,8 +132,8 @@
             <!-- ####################################################################################################### -->
             <div id="copyright">
                 <p class="fl_left"><p></p>
-                <p><a href="http://i.creativecommons.org/l/by/3.0/80x15.png">
-                    <img border="0" alt="by" src="http://i.creativecommons.org/l/by/3.0/80x15.png"></img>
+                <!--<p><a href="http://i.creativecommons.org/l/by/3.0/80x15.png">-->
+                    <!--<img border="0" alt="by" src="http://i.creativecommons.org/l/by/3.0/80x15.png"></img>-->
                 </a>
                 Copyright The University of Leeds 2014. Template by <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>, and updated from
                 <a href="http://liverpool.gisruk.org/">the GISRUK 2013 website</a> by <a href="mailto:R.Lovelace@leeds.ac.uk">Robin Lovelace</a>.
