--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <a href="http://www.geotalisman.org/" target="_blank"><img class="imgl" src="index_files/talisman_logo.jpg" alt=""></a>
                     <a href="http://www.geotalisman.org/" target="_blank"><img class="imgl" src="index_files/talisman_logo2.jpg" alt=""></a>
                     <a href="http://www.leeds.ac.uk/" target="_blank"><img class="imgl" src="index_files/leeds_logo.jpg" alt=""></a>
-                    <a href="mailto:N.Malleson06@leeds.ac.uk" target="_blank"><img class="imgl" src="index_files/addYourLogo.svg" alt=""></a>
+                    <a href="mailto:N.Malleson06@leeds.ac.uk" target="_blank"><img class="imgl" src="index_files/yourlogo.png" alt=""></a>
                     <br class="clear">
                     <p>If you are interested in sponsoring GISRUK 2015, then please get in touch with <a href="mailto:N.Malleson06@leeds.ac.uk">Nick Malleson</a></p>      </li>
 
