updated getting here page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </li>
                         <li><a href="#">GISRUK 2015</a>
                         <ul>
-                            <li><a href="travel.html">Getting Here</a></li>
+                            <li><a href="getting-here.html">Getting Here</a></li>
                             <li><a href="bursaries.html">Bursaries</a></li>
                             <li><a href="prizes.html">Prizes</a></li>
                         </ul>
