Add info about the conference

--- a/index.html
+++ b/index.html
@@ -97,12 +97,29 @@
                     <!-- <p class="readmore"><a href="http://www.geo.ed.ac.uk/gisruk/gisruk.html">More about GISRUK »</a></p> -->
                     </li>
                     <li>
-                    <h2>More details coming soon...</h2>
-                    <img class="imgl" src="index_files/rgs_logo.jpg" alt="">
-                    <p>We will shortly be announcing the call for papers and other information about the conference.
-                    If you would like to be notified, please email <a href="mailto:N.Malleson06@leeds.ac.uk">Nick Malleson</a>
-                    or follow @GISRUK on Twitter</p>
-                    </li>
+                    <h2>Conference Themes</h2>
+                    <p>In recognition of the recently funded £6M+ ESRC Consumer Data Research Centre, we are especially
+                    interested in abstracts on our main conference theme:</p>
+                    <ul>
+                        <li>Big Data and the future of GIS</li>
+                    </ul>
+
+                    <p>We also welcome submissions on all aspects of methodological, applied or theoretical GIS and, in
+                    particular, our other conference topics:</p>
+
+                    <ul>
+                        <li>Health and Wellbeing</li>
+                        <li>Crime and Policing</li>
+                        <li>retail geography</li>
+                        <li>Transport systems</li>
+                        <li>Environmental GIS and Hazards</li>
+                        <li>Uncertainty and Error</li>
+                        <li>Energy and sustainability</li>
+                        <li>Spatial analysis and visualisation</li>
+                        <li>Geodemographics and populations</li>
+                        <li>Historical applications of GIS</li>
+                    </ul>
+
                     <!-- <li>
                     <h2>Supporting Early Careers Researchers</h2>
                     <img class="imgl" src="index_files/rgs_logo.jpg" alt="">
