fixed formatting of theme list

--- a/index.html
+++ b/index.html
@@ -98,27 +98,23 @@
                     </li>
                     <li>
                     <h2>Conference Themes</h2>
-                    <p>In recognition of the recently funded £6M+ ESRC Consumer Data Research Centre, we are especially
-                    interested in abstracts on our main conference theme:</p>
-                    <ul>
-                        <li>Big Data and the future of GIS</li>
-                    </ul>
+                    <p>In recognition of the recently funded &pound;6M+ ESRC <a
+                        href="http://www.lida.leeds.ac.uk/">Consumer Data Research Centre</a>, we are especially
+                    interested in abstracts on our main conference theme:<br/>
+                    <strong>Big Data and the future of GIS</strong></p>
 
                     <p>We also welcome submissions on all aspects of methodological, applied or theoretical GIS and, in
-                    particular, our other conference topics:</p>
-
-                    <ul>
-                        <li>Health and Wellbeing</li>
-                        <li>Crime and Policing</li>
-                        <li>retail geography</li>
-                        <li>Transport systems</li>
-                        <li>Environmental GIS and Hazards</li>
-                        <li>Uncertainty and Error</li>
-                        <li>Energy and sustainability</li>
-                        <li>Spatial analysis and visualisation</li>
-                        <li>Geodemographics and populations</li>
-                        <li>Historical applications of GIS</li>
-                    </ul>
+                    particular, our other conference topics:<br/>
+                    <strong>Crime and Postrongcing</strong><br/>
+                    <strong>Health and Wellbeing</strong><br/>
+                    <strong>Transport systems</strong><br/>
+                    <strong>Environmental GIS and Hazards</strong><br/>
+                    <strong>Uncertainty and Error</strong><br/>
+                    <strong>Energy and sustainabistrongty</strong><br/>
+                    <strong>Spatial analysis and visuastrongsation</strong><br/>
+                    <strong>Geodemographics and populations</strong><br/>
+                    <strong>Historical appstrongcations of GIS</strong>
+                    </p>
 
                     <!-- <li>
                     <h2>Supporting Early Careers Researchers</h2>
@@ -133,11 +129,12 @@
                     -->
                     <li class="last">
                     <h2>Sponsors</h2>
-                    <p>GISRUK would not be possible without the kind support of our sponsors...</p>
+                    <p>GISRUK would not be possible without the kind support of our sponsors. If you would like to
+                    sponsor the conference, please contact <a href="mailto:N.Malleson06@leeds.ac.uk">Nick
+                        Malleson</a>.</p>
                     <a href="http://www.geotalisman.org/" target="_blank"><img class="imgl" src="index_files/talisman_logo.jpg" alt=""></a>
                     <a href="http://www.geotalisman.org/" target="_blank"><img class="imgl" src="index_files/talisman_logo2.jpg" alt=""></a>
                     <a href="http://www.leeds.ac.uk/" target="_blank"><img class="imgl" src="index_files/leeds_logo.jpg" alt=""></a>
-                    <a href="mailto:N.Malleson06@leeds.ac.uk" target="_blank"><img class="imgl" src="index_files/addYourLogo.svg" alt=""></a>
                     <br class="clear">
                     <p>If you are interested in sponsoring GISRUK 2015, then please get in touch with <a href="mailto:N.Malleson06@leeds.ac.uk">Nick Malleson</a></p>      </li>
 
@@ -150,17 +147,17 @@
             <div id="copyright">
                 <p class="fl_left"><p></p>
                 <!--<p><a href="http://i.creativecommons.org/l/by/3.0/80x15.png">-->
-                    <!--<img border="0" alt="by" src="http://i.creativecommons.org/l/by/3.0/80x15.png"></img>-->
-                </a>
-                Copyright The University of Leeds 2014. Template by <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>, and updated from
-                <a href="http://liverpool.gisruk.org/">the GISRUK 2013 website</a> by <a href="mailto:R.Lovelace@leeds.ac.uk">Robin Lovelace</a>.
-                If you would like to change/add any content, please contact Robin or fork the website's <a href="https://github.com/Robinlovelace/gisruk2015/tree/gh-pages">GitHub repository</a>.
-                <a></p>
-                    <br class="clear">
-                </div>
-                <!-- ####################################################################################################### -->
+                <!--<img border="0" alt="by" src="http://i.creativecommons.org/l/by/3.0/80x15.png"></img>-->
+            </a>
+            Copyright The University of Leeds 2014. Template by <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>, and updated from
+            <a href="http://liverpool.gisruk.org/">the GISRUK 2013 website</a> by <a href="mailto:R.Lovelace@leeds.ac.uk">Robin Lovelace</a>.
+            If you would like to change/add any content, please contact Robin or fork the website's <a href="https://github.com/Robinlovelace/gisruk2015/tree/gh-pages">GitHub repository</a>.
+            <a></p>
                 <br class="clear">
             </div>
+            <!-- ####################################################################################################### -->
+            <br class="clear">
+        </div>
 
 
-    </body></html>
+        </body></html>
