--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                     <strong>Historical appstrongcations of GIS</strong>
                     </p>
 
+                    <p>To submit a paper, see <a href="submit.html">submit</a>.</p>
+
                     <!-- <li>
                     <h2>Supporting Early Careers Researchers</h2>
                     <img class="imgl" src="index_files/rgs_logo.jpg" alt="">
