added submission instructions

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                     <h2>Conference Themes</h2>
                     <p>In recognition of the recently funded &pound;6M+ ESRC <a
                         href="http://www.lida.leeds.ac.uk/">Consumer Data Research Centre</a>, we are especially
-                    interested in abstracts on our main conference theme:<br/>
+                    interested in abstracts on our main conference theme:<br/><br/>
                     <strong>Big Data and the future of GIS</strong></p>
 
                     <p>We also welcome submissions on all aspects of methodological, applied or theoretical GIS and, in
-                    particular, our other conference topics:<br/>
+                    particular, our other conference topics:<br/><br/>
                     <strong>Crime and Postrongcing</strong><br/>
                     <strong>Health and Wellbeing</strong><br/>
                     <strong>Transport systems</strong><br/>
