--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                     <p>We also welcome submissions on all aspects of methodological, applied or theoretical GIS and, in
                     particular, our other conference topics:<br/><br/>
-                    <strong>Crime and Postrongcing</strong><br/>
+                    <strong>Crime and Policing</strong><br/>
                     <strong>Health and Wellbeing</strong><br/>
                     <strong>Transport systems</strong><br/>
                     <strong>Environmental GIS and Hazards</strong><br/>
