--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <p>GISRUK would not be possible without the kind support of our sponsors. If you would like to
                     sponsor the conference, please contact <a href="mailto:N.Malleson06@leeds.ac.uk">Nick
                         Malleson</a>.</p>
-                    <a href="http://www.geotalisman.org/" target="_blank"><img class="imgl" src="index_files/talisman_logo.jpg" alt=""></a>
+                    <a id = 'talisman' href="http://www.geotalisman.org/" target="_blank"><img class="imgl" src="index_files/talisman_logo.jpg" alt=""></a>
                     <a href="http://www.geotalisman.org/" target="_blank"><img class="imgl" src="index_files/talisman_logo2.jpg" alt=""></a>
                     <a href="http://www.leeds.ac.uk/" target="_blank"><img class="imgl" src="index_files/leeds_logo.jpg" alt=""></a>
                     <br class="clear">
