--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     </li>
                     <li>
                     <h2>Conference Themes</h2>
-                    <p>In recognition of the recently funded &pound;6M+ ESRC <a
-                        href="http://www.lida.leeds.ac.uk/">Consumer Data Research Centre</a>, we are especially
+                    <p>In recognition of the recently funded &pound;6M+ ESRC <a href="http://www.lida.leeds.ac.uk/">
+					Consumer Data Research Centre</a> , we are especially
                     interested in abstracts on our main conference theme:<br/><br/>
                     <strong>Big Data and the future of GIS</strong></p>
 
@@ -110,13 +110,13 @@
                     <strong>Transport systems</strong><br/>
                     <strong>Environmental GIS and Hazards</strong><br/>
                     <strong>Uncertainty and Error</strong><br/>
-                    <strong>Energy and sustainabistrongty</strong><br/>
-                    <strong>Spatial analysis and visuastrongsation</strong><br/>
+                    <strong>Energy and sustainability</strong><br/>
+                    <strong>Spatial analysis and visualisation</strong><br/>
                     <strong>Geodemographics and populations</strong><br/>
-                    <strong>Historical appstrongcations of GIS</strong>
+                    <strong>Historical applications of GIS</strong>
                     </p>
 
-                    <p>To submit a paper, see <a href="submit.html">submit</a>.</p>
+                    <p>To submit a paper, see <a href="submit.html">Submit a Paper</a>.</p>
 
                     <!-- <li>
                     <h2>Supporting Early Careers Researchers</h2>
