typo correction and shortening intro

--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
                     (GISRUK) conference. <a href="https://twitter.com/search?f=realtime&q=%23GISRUK2015&src=typd">#GISRUK2015</a> is hosted by the
                     University of Leeds' esteemed <a href="http://www.geog.leeds.ac.uk/">School of Geography</a> in the
                     <a href="http://www.environment.leeds.ac.uk/">Faculty of Environment</a>.
-                    The conference will take place on the 14th - 17th April 2015.
+                    The conference will take place on the <strong>14th - 17th April</strong>, 2015.
                     </p>
                     <p>The image to the left is an Ordnance Survey map of northwest Leeds from the 1950s,
-                    with rail routes added by <a href="http://www.davidheyscollection.com/page50.htm"> David
-                        Hey.</a> Thanks to train spotter and local historian David for permission to
-                    use of this image.</p>
+                    with rail routes added by train spotter and local historian <a href="http://www.davidheyscollection.com/page50.htm"> David
+                        Hey</a>.</p>
                     <br> <br>
 
                     <a href="https://twitter.com/gisruk" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gisruk</a>
