updated cfp menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="topnav">
                     <ul id="menu">
                         <li class="active"><a href="http://Leeds.gisruk.org/index.html">Home</a></li>
-                        <li><a href="submit.html">Submit a Paper</a></li>
+                        <li><a href="submit.html">Call for papers</a></li>
                         <li><a href="registration.html">Registration</a></li>
                         <li><a href="programme.html">Programme</a>
                         <ul>
@@ -115,7 +115,7 @@
                     <strong>Historical applications of GIS</strong>
                     </p>
 
-                    <p>To submit a paper, see <a href="submit.html">Submit a Paper</a>.</p>
+                    <p>To submit a paper, see <a href="submit.html">Call for papers</a>.</p>
 
                     <!-- <li>
                     <h2>Supporting Early Careers Researchers</h2>
