--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                     <p>The image to the left is an Ordnance Survey map of northwest Leeds from the 1950s,
                     with rail routes added by train spotter and local historian <a href="http://www.davidheyscollection.com/page50.htm"> David
                         Hey</a>.</p>
-                    <br> <br>
+                    <br>
+                    <p><marquee style="border:RED 3px SOLID"><b><a href="http://leeds.gisruk.org/submit.html">Deadline of Call for Papers: 7th November</a></b></marquee></p>
+                    <br>
 
                     <a href="https://twitter.com/gisruk" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gisruk</a>
                     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
